fix navbar on mobile view

--- a/src/style.css
+++ b/src/style.css
@@ -41,12 +41,19 @@ a:visited {
 .header {
     color: white;
     background-color: #3F51B5;
-    padding: 17px 16px;
+    padding: 17px 20px 16px 0px;
     margin-bottom: 16px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+@media (max-width: 767px) {
+    .header {
+        padding: 0px 14px 16px 0px;
+        flex-direction: column;
+    }
 }
 
 .select {
@@ -75,7 +82,6 @@ a:visited {
     .main-div {
         margin: 10px;
         flex-direction: column;
-        /* align-items: flex-start; */
     }
 }
 
